--- a/_config/prometheus.yml
+++ b/_config/prometheus.yml
@@ -24,11 +24,14 @@ scrape_configs:
     static_configs:
       - targets:
           - prometheus:9090
-  - job_name: "cloudflared"
+  #  - job_name: "cloudflared"
+  #    static_configs:
+  #      - targets: ["cloudflared:60123"]
+  - job_name: "slanger-dev"
+    metrics_path: "/metrics"
     static_configs:
-      - targets: ["cloudflared:60123"]
-    metrics_path: /metricsscrape_configs
-  - job_name: "slanger"
+      - targets: ["dev.haxor.space"]
+  - job_name: "slanger-main"
+    metrics_path: "/metrics"
     static_configs:
-      - targets: ["https://dev.haxor.space"]
-        scrape_configs:
+      - targets: ["main.haxor.space"]
