--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
 
   cloudflared:
     image: cloudflare/cloudflared:latest
-    container_name: cloudflared-${ENVIRONMENT}
+    container_name: cloudflared-alpaca-${ENVIRONMENT}
     profiles:
       - dev
       - main
@@ -134,6 +134,8 @@ services:
       - ./svc/slanger/:/app/
     depends_on:
       - cloudflared
+    networks:
+      - core_network
     environment:
       - APCA_API_KEY_ID=${APCA_API_KEY_ID}
       - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
@@ -206,6 +208,9 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus-core
     restart: always
+    environment:
+      - SLANGER_DEV=${SLANGER_DEV}
+      - SLANGER_MAIN=${SLANGER_MAIN}
     volumes:
       - ./_config/prometheus.yml:/etc/prometheus/prometheus.yml
     command:
@@ -223,7 +228,6 @@ services:
     image: redis/redis-stack:latest
     container_name: redis-stack-core
     restart: always
-    #command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
     ports:
       - ${REDIS_PORT:-6379}:6379
       - ${REDIS_PORT_TWO:-8001}:8001
@@ -240,23 +244,6 @@ services:
 networks:
   core_network:
     external: true
-#networks:
-#  cloudflared_dev:
-#    driver: bridge
-#  core_network:
-#    driver: bridge
-#  marketstore_network:
-#    driver: bridge
-#  #core_network_dev:
-#  #  driver: bridge
-#  #marketstore_network_dev:
-#  #  driver: bridge
-#  cloudflared_main:
-#    driver: bridge
-#  #core_network_main:
-#  #  driver: bridge
-#  #marketstore_network_main:
-#  #  driver: bridge
 
 volumes:
   redis_data:
