--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,10 @@ services:
     container_name: beancleaner-${ENVIRONMENT}
     profiles:
       - dev
-      #- main
+      - main
     labels:
       - "profile=dev"
-     #- "profile=main"
+      - "profile=main"
     restart: always
     volumes:
       - ./svc/beancleaner/:/app/
@@ -93,6 +93,30 @@ services:
   #    - REDIS_HOST=${REDIS_HOST:-redis-stack}
   #    - REDIS_PORT=${REDIS_PORT:-6379}
 
+  yieldyak:
+    build:
+      args:
+        SVC_DIR: ./svc/yieldyak
+    container_name: yieldyak-${ENVIRONMENT}
+    profiles:
+      - dev
+      - main
+    labels:
+      - "profile=dev"
+      - "profile=main"
+    restart: always
+    volumes:
+      - ./svc/yieldyak/:/app/
+      - ./_config/credentials.json/:/app/.credentials.json
+    networks:
+      - core_network
+    environment:
+      - APCA_API_KEY_ID=${APCA_API_KEY_ID}
+      - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
+      - ENVIRONMENT=${ENVIRONMENT}
+      - GOOGLE_CALENDAR_ID=${GOOGLE_CALENDAR_ID}
+      - GOOGLE_SERVICE_ACCOUNT_FILE=${GOOGLE_SERVICE_ACCOUNT_FILE}
+
   earnyearn:
     build:
       args:
@@ -118,6 +142,27 @@ services:
       - REDIS_HOST=${REDIS_HOST:-redis-stack}
       - REDIS_PORT=${REDIS_PORT:-6379}
       - TRADINGVIEW_SECRET=${TRADINGVIEW_SECRET}
+
+  etfowl:
+    build:
+      args:
+        SVC_DIR: ./svc/etfowl
+    container_name: etfowl-${ENVIRONMENT}
+    profiles:
+      - dev
+      #- main
+    labels:
+      - "profile=dev"
+      #- "profile=main"
+    restart: always
+    volumes:
+      - ./svc/etfowl/:/app/
+    networks:
+      - core_network
+    environment:
+      - APCA_API_KEY_ID=${APCA_API_KEY_ID}
+      - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
+      - ENVIRONMENT=${ENVIRONMENT}
 
   sentimentsheperd:
     build:
