--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,53 +70,6 @@ services:
       - /home/captain/.cloudflared/alpaca-${ENVIRONMENT}:/etc/cloudflared
       #- ./cloudflared:/etc/cloudflared
 
-  #dailychange:
-  #  build:
-  #    args:
-  #      SVC_DIR: ./svc/dailychange
-  #  container_name: dailychange-${ENVIRONMENT}
-  #  profiles:
-  #    - dev
-  #      - main
-  #  labels:
-  #    - "profile=dev"
-  #    - "profile=main"
-  #  restart: always
-  #  volumes:
-  #    - ./svc/dailychange/:/app/
-  #  networks:
-  #    - core_network
-  #  environment:
-  #    - APCA_API_KEY_ID=${APCA_API_KEY_ID}
-  #    - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
-  #    - ENVIRONMENT=${ENVIRONMENT}
-  #    - REDIS_HOST=${REDIS_HOST:-redis-stack}
-  #    - REDIS_PORT=${REDIS_PORT:-6379}
-
-  yieldyak:
-    build:
-      args:
-        SVC_DIR: ./svc/yieldyak
-    container_name: yieldyak-${ENVIRONMENT}
-    profiles:
-      - dev
-      - main
-    labels:
-      - "profile=dev"
-      - "profile=main"
-    restart: always
-    volumes:
-      - ./svc/yieldyak/:/app/
-      - ./_config/credentials.json/:/app/.credentials.json
-    networks:
-      - core_network
-    environment:
-      - APCA_API_KEY_ID=${APCA_API_KEY_ID}
-      - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
-      - ENVIRONMENT=${ENVIRONMENT}
-      - GOOGLE_CALENDAR_ID=${GOOGLE_CALENDAR_ID}
-      - GOOGLE_SERVICE_ACCOUNT_FILE=${GOOGLE_SERVICE_ACCOUNT_FILE}
-
   earnyearn:
     build:
       args:
@@ -143,26 +96,32 @@ services:
       - REDIS_PORT=${REDIS_PORT:-6379}
       - TRADINGVIEW_SECRET=${TRADINGVIEW_SECRET}
 
-  etfowl:
-    build:
-      args:
-        SVC_DIR: ./svc/etfowl
-    container_name: etfowl-${ENVIRONMENT}
-    profiles:
-      - dev
-      #- main
-    labels:
-      - "profile=dev"
-      #- "profile=main"
-    restart: always
-    volumes:
-      - ./svc/etfowl/:/app/
-    networks:
-      - core_network
-    environment:
-      - APCA_API_KEY_ID=${APCA_API_KEY_ID}
-      - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
-      - ENVIRONMENT=${ENVIRONMENT}
+  # etfowl:
+  #   build:
+  #     args:
+  #       SVC_DIR: ./svc/etfowl
+  #   container_name: etfowl-${ENVIRONMENT}
+  #   profiles:
+  #     - dev
+  #     #- main
+  #   labels:
+  #     - "profile=dev"
+  #     #- "profile=main"
+  #   restart: always
+  #   volumes:
+  #     - ./svc/etfowl/:/app/
+  #   networks:
+  #     - core_network
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         cpus: '2.0'  # Assign 2 CPU cores
+  #       reservations:
+  #         cpus: '1.0'  # Reserve 1 CPU core
+  #   environment:
+  #     - APCA_API_KEY_ID=${APCA_API_KEY_ID}
+  #     - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
+  #     - ENVIRONMENT=${ENVIRONMENT}
 
   sentimentsheperd:
     build:
@@ -211,6 +170,55 @@ services:
       - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
       - ENVIRONMENT=${ENVIRONMENT}
       - TRADINGVIEW_SECRET=${TRADINGVIEW_SECRET}
+  
+  volatilityvulture:
+    build:
+      args:
+        SVC_DIR: ./svc/volatilityvulture
+    container_name: volatilityvulture-${ENVIRONMENT}
+    profiles:
+      - dev
+      - main
+    labels:
+      - "profile=dev"
+      - "profile=main"
+    restart: always
+    volumes:
+      - ./svc/volatilityvulture/:/app/
+    networks:
+      - core_network
+    environment:
+      - APCA_API_KEY_ID=${APCA_API_KEY_ID}
+      - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
+      - ENVIRONMENT=${ENVIRONMENT}
+      - DEBUG=${DEBUG:-true}
+      - REDIS_HOST=${REDIS_HOST:-redis-stack}
+      - REDIS_PORT=${REDIS_PORT:-6379}
+
+  yieldyak:
+    build:
+      args:
+        SVC_DIR: ./svc/yieldyak
+    container_name: yieldyak-${ENVIRONMENT}
+    profiles:
+      - dev
+      - main
+    labels:
+      - "profile=dev"
+      - "profile=main"
+    restart: always
+    volumes:
+      - ./svc/yieldyak/:/app/
+      - ./_config/credentials.json/:/app/.credentials.json
+    networks:
+      - core_network
+    environment:
+      - APCA_API_KEY_ID=${APCA_API_KEY_ID}
+      - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
+      - DEBUG=${DEBUG:-true}
+      - ENVIRONMENT=${ENVIRONMENT}
+      - GOOGLE_CALENDAR_ID=${GOOGLE_CALENDAR_ID}
+      - GOOGLE_SERVICE_ACCOUNT_FILE=${GOOGLE_SERVICE_ACCOUNT_FILE}
 
   ################
   ## CORE
@@ -257,6 +265,26 @@ services:
     volumes:
       - grafana_data:/var/lib/grafana
       - ./_config/provisioning:/etc/grafana/provisioning
+
+  influxdb:
+    image: influxdb:latest
+    container_name: influxdb
+    ports:
+      - "8086:8086"
+    profiles:
+      - core
+    labels:
+      - "profile=core"
+    volumes:
+      - influxdb-data:/var/lib/influxdb
+    environment:
+      - INFLUXDB_DB=${INFLUXDB_DB:-mydb}
+      - INFLUXDB_ADMIN_USER=${INFLUXDB_ADMIN_USER:-admin}
+      - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_ADMIN_PASSWORD:-admin}
+      - INFLUXDB_USER=${INFLUXDB_USER:-myuser}
+      - INFLUXDB_USER_PASSWORD=${INFLUXDB_USER_PASSWORD:-mypassword}
+    networks:
+      - core_network
 
   marketstore:
     image: alpacamarkets/marketstore:latest
@@ -321,4 +349,6 @@ volumes:
   redis_data:
     driver: local
   grafana_data:
+    driver: local
+  influxdb-data:
     driver: local
