a lotta improvements to pre and post processing so that orders are both more robust and simpler to work with.

--- a/_config/prometheus.yml
+++ b/_config/prometheus.yml
@@ -31,11 +31,11 @@ scrape_configs:
     scheme: https
     static_configs:
       - targets:
-        - "dev.haxor.space"
+        - "${SLANGER_DEV}"
 
   - job_name: "slanger-main"
     metrics_path: "/metrics"
     scheme: https
     static_configs:
       - targets: 
-        - "main.haxor.space"
+        - "${SLANGER_MAIN}"
