--- a/svc/sentimentsheperd/requirements.txt
+++ b/svc/sentimentsheperd/requirements.txt
@@ -1,7 +1,7 @@
 aiohttp==3.9.5
 aioredis==2.0.1
 alpaca-py==0.17.0
-beautifulsoup4==4.12.3 
-datetime2==0.9.4
-openai==1.7.2
 redis==5.0.4
+rich==13.9.1
+transformers==4.45.1
+torch==2.4.1 
