--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,4 @@
 services:
-  aristocrats:
-    build:
-      args:
-        SVC_DIR: ./svc/aristocrats
-    container_name: aristocrats-${ENVIRONMENT}
-    profiles:
-      - dev
-      #- main
-    labels:
-      - "profile=dev"
-      # - "profile=main"
-    networks:
-      - core_network
-    restart: always
-    environment:
-      - REDIS_HOST=${REDIS_HOST:-redis-stack}
-      - REDIS_PORT=${REDIS_PORT:-6379}
-
   beancleaner:
     build:
       args:
@@ -33,8 +15,6 @@ services:
       - ./svc/beancleaner/:/app/
     networks:
       - core_network
-    #depends_on:
-    #  - earnyearn
     environment:
       - APCA_API_KEY_ID=${APCA_API_KEY_ID}
       - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
@@ -70,37 +50,13 @@ services:
       - /home/captain/.cloudflared/alpaca-${ENVIRONMENT}:/etc/cloudflared
       #- ./cloudflared:/etc/cloudflared
 
-  earnyearn:
-    build:
-      args:
-        SVC_DIR: ./svc/earnyearn
-    container_name: earnyearn-${ENVIRONMENT}
-    profiles:
-      - dev
-      #- main
-    labels:
-      - "profile=dev"
-      #- "profile=main"
-    restart: always
-    volumes:
-      - ./svc/earnyearn/:/app/
-    networks:
-      - core_network
-    environment:
-      - APCA_API_KEY_ID=${APCA_API_KEY_ID}
-      - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
-      - EARNYEARN_ORDER_ENDPOINT=${EARNYEARN_ORDER_ENDPOINT}
-      - ENVIRONMENT=${ENVIRONMENT}
-      - FINNHUB_API_KEY=${FINNHUB_API_KEY}
-      - REDIS_HOST=${REDIS_HOST:-redis-stack}
-      - REDIS_PORT=${REDIS_PORT:-6379}
-      - TRADINGVIEW_SECRET=${TRADINGVIEW_SECRET}
-
-  # etfowl:
+  # earnyearn:
+  # @TODO earnyearn is running into bad request because it's unable to sell short
+  # it's also having false signals on the same candle
   #   build:
   #     args:
-  #       SVC_DIR: ./svc/etfowl
-  #   container_name: etfowl-${ENVIRONMENT}
+  #       SVC_DIR: ./svc/earnyearn
+  #   container_name: earnyearn-${ENVIRONMENT}
   #   profiles:
   #     - dev
   #     #- main
@@ -109,85 +65,46 @@ services:
   #     #- "profile=main"
   #   restart: always
   #   volumes:
-  #     - ./svc/etfowl/:/app/
-  #   networks:
-  #     - core_network
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         cpus: '2.0'  # Assign 2 CPU cores
-  #       reservations:
-  #         cpus: '1.0'  # Reserve 1 CPU core
-  #   environment:
-  #     - APCA_API_KEY_ID=${APCA_API_KEY_ID}
-  #     - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
-  #     - ENVIRONMENT=${ENVIRONMENT}
-
-  # influxox:
-  #   build:
-  #     args:
-  #       SVC_DIR: ./svc/influxox
-  #   container_name: influxox-${ENVIRONMENT}
-  #   profiles:
-  #     - dev
-  #     - main
-  #   labels:
-  #     - "profile=dev"
-  #     - "profile=main"
-  #   restart: always
-  #   volumes:
-  #     - ./svc/influxox/:/app/
+  #     - ./svc/earnyearn/:/app/
   #   networks:
   #     - core_network
   #   environment:
   #     - APCA_API_KEY_ID=${APCA_API_KEY_ID}
   #     - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
+  #     - EARNYEARN_ORDER_ENDPOINT=${EARNYEARN_ORDER_ENDPOINT}
   #     - ENVIRONMENT=${ENVIRONMENT}
+  #     - FINNHUB_API_KEY=${FINNHUB_API_KEY}
   #     - REDIS_HOST=${REDIS_HOST:-redis-stack}
   #     - REDIS_PORT=${REDIS_PORT:-6379}
- 
-  # madplotter:
+  #     - TRADINGVIEW_SECRET=${TRADINGVIEW_SECRET}
+
+  
+  # sentimentsheperd:
   #   build:
+  #     dockerfile: Dockerfile.sentimentsheperd
   #     args:
-  #       SVC_DIR: ./svc/madplotter
-  #   container_name: madplotter-${ENVIRONMENT}
+  #       SVC_DIR: ./svc/sentimentsheperd
+  #   restart: always
+  #   container_name: sentimentsheperd-${ENVIRONMENT}
   #   profiles:
   #     - dev
-  #   #  - main
   #   labels:
   #     - "profile=dev"
-  #   #  - "profile=main"
-  #   restart: always
   #   volumes:
-  #     - ./svc/madplotter/:/app/
+  #     - ./svc/sentimentsheperd/:/app/
   #   networks:
   #     - core_network
   #   environment:
-  #     - APCA_API_KEY_ID=${APCA_API_KEY_ID}
-  #     - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
+  #     - REDIS_HOST=${REDIS_HOST:-redis-stack}
+  #     - REDIS_PORT=${REDIS_PORT:-6379}
   #     - ENVIRONMENT=${ENVIRONMENT}
-
-  sentimentsheperd:
-    build:
-      args:
-        SVC_DIR: ./svc/sentimentsheperd
-    restart: always
-    container_name: sentimentsheperd-${ENVIRONMENT}
-    profiles:
-      - dev
-    labels:
-      - "profile=dev"
-    volumes:
-      - ./svc/sentimentsheperd/:/app/
-    depends_on:
-      - cloudflared
-    networks:
-      - core_network
-    environment:
-      - REDIS_HOST=${REDIS_HOST:-redis-stack}
-      - REDIS_PORT=${REDIS_PORT:-6379}
-      - ENVIRONMENT=${ENVIRONMENT}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
+  #   deploy:
+  #     resources:
+  #       reservations:
+  #         devices:
+  #           - driver: nvidia
+  #             count: all
+  #             capabilities: [gpu]
 
   slanger:
     build:
@@ -216,6 +133,7 @@ services:
       - KRAKEN_API_SECRET=${KRAKEN_API_SECRET}
       - ENVIRONMENT=${ENVIRONMENT}
       - TRADINGVIEW_SECRET=${TRADINGVIEW_SECRET}
+      - SLANGER_INFLUXDB_TOKEN=${SLANGER_INFLUXDB_TOKEN}
   
   volatilityvulture:
     build:
@@ -224,10 +142,10 @@ services:
     container_name: volatilityvulture-${ENVIRONMENT}
     profiles:
       - dev
-      - main
+      #- main
     labels:
       - "profile=dev"
-      - "profile=main"
+      #- "profile=main"
     restart: always
     volumes:
       - ./svc/volatilityvulture/:/app/
@@ -269,6 +187,46 @@ services:
   ################
   ## CORE
   ################
+  aristocrats:
+    build:
+      args:
+        SVC_DIR: ./svc/aristocrats
+    container_name: aristocrats-${ENVIRONMENT}
+    profiles:
+      - core
+    labels:
+      - "profile=dev"
+    networks:
+      - core_network
+    restart: always
+    environment:
+      - REDIS_HOST=${REDIS_HOST:-redis-stack}
+      - REDIS_PORT=${REDIS_PORT:-6379}
+      - ENVIRONMENT=${ENVIRONMENT}
+
+  influxox:
+    build:
+      args:
+        SVC_DIR: ./svc/influxox
+    container_name: influxox-${ENVIRONMENT}
+    profiles:
+      - core
+    labels:
+      - "profile=core"
+    restart: always
+    volumes:
+      - ./svc/influxox/:/app/
+    depends_on:
+      - redis-stack
+      - influxdb
+    networks:
+      - core_network
+    environment:
+      - ENVIRONMENT=${ENVIRONMENT}
+      - REDIS_HOST=${REDIS_HOST:-redis-stack}
+      - REDIS_PORT=${REDIS_PORT:-6379}}
+      - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
+
   purrstream:
     build:
       args:
@@ -279,6 +237,8 @@ services:
       - ${PURRSTREAM_PORT:-8000}:8000
     profiles:
       - core
+    depends_on:
+      - redis-stack
     labels:
       - "profile=core"
     networks:
@@ -289,7 +249,7 @@ services:
       - APCA_API_KEY_ID=${APCA_API_KEY_ID}
       - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
       - REDIS_HOST=${REDIS_HOST:-redis-stack}
-      - REDIS_PORT=${REDIS_PORT:-6379}
+      - REDIS_PORT=${REDIS_PORT:-6379}}
 
   grafana:
     build:
@@ -324,11 +284,9 @@ services:
     volumes:
       - influxdb-data:/var/lib/influxdb
     environment:
-      - INFLUXDB_DB=${INFLUXDB_DB:-mydb}
       - INFLUXDB_ADMIN_USER=${INFLUXDB_ADMIN_USER:-admin}
-      - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_ADMIN_PASSWORD:-admin}
-      - INFLUXDB_USER=${INFLUXDB_USER:-myuser}
-      - INFLUXDB_USER_PASSWORD=${INFLUXDB_USER_PASSWORD:-mypassword}
+      - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_ADMIN_PASSWORD:-supersecretpassword}
+      - INFLUX_DB=${INFLUXDB_DB:-marketstore}
     networks:
       - core_network
 
