--- a/svc/influxox/requirements.txt
+++ b/svc/influxox/requirements.txt
@@ -1,2 +1,7 @@
 influxdb-client==1.46.0
 redis==5.0.8
+requests==2.31.0
+websockets==10.4
+aiohttp==3.9.5
+prometheus-client==0.20.0
+apscheduler==3.10.4
