--- a/Dockerfile.sentimentsheperd
+++ b/Dockerfile.sentimentsheperd
@@ -1,15 +1,21 @@
 # Use an official CUDA runtime as a parent image
-FROM nvidia/cuda:12.6.1-cudnn8-runtime-ubuntu20.04
+FROM nvidia/cuda:12.6.1-cudnn-devel-ubuntu20.04
 
 # Set the working directory in the container
 WORKDIR /app
 
 ARG SVC_DIR
 
+
+# Install dependencies
+RUN apt-get update && apt-get install -y \
+    
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
-    && rm -rf /var/lib/apt/lists/*
+    python3 \
+    python3-pip \
+    && apt-get clean
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
