new changes for trailing to test today

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,32 +77,32 @@ services:
       - TRADINGVIEW_SECRET=${TRADINGVIEW_SECRET}
 
   
-  sentimentsheperd:
-    build:
-      dockerfile: Dockerfile.sentimentsheperd
-      args:
-        SVC_DIR: ./svc/sentimentsheperd
-    restart: always
-    container_name: sentimentsheperd-${ENVIRONMENT}
-    profiles:
-      - dev
-    labels:
-      - "profile=dev"
-    volumes:
-      - ./svc/sentimentsheperd/:/app/
-    networks:
-      - core_network
-    environment:
-      - REDIS_HOST=${REDIS_HOST:-redis-stack}
-      - REDIS_PORT=${REDIS_PORT:-6379}
-      - ENVIRONMENT=${ENVIRONMENT}
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
+  # sentimentsheperd:
+  #   build:
+  #     dockerfile: Dockerfile.sentimentsheperd
+  #     args:
+  #       SVC_DIR: ./svc/sentimentsheperd
+  #   restart: always
+  #   container_name: sentimentsheperd-${ENVIRONMENT}
+  #   profiles:
+  #     - dev
+  #   labels:
+  #     - "profile=dev"
+  #   volumes:
+  #     - ./svc/sentimentsheperd/:/app/
+  #   networks:
+  #     - core_network
+  #   environment:
+  #     - REDIS_HOST=${REDIS_HOST:-redis-stack}
+  #     - REDIS_PORT=${REDIS_PORT:-6379}
+  #     - ENVIRONMENT=${ENVIRONMENT}
+  #   deploy:
+  #     resources:
+  #       reservations:
+  #         devices:
+  #           - driver: nvidia
+  #             count: all
+  #             capabilities: [gpu]
 
   slanger:
     build:
