--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "profile=main"
     restart: always
     volumes:
-      - ./svc/beancleaner/:/app/
+      - ./svc/beancleaner/:/app/:ro
     networks:
       - core_network
     environment:
@@ -47,7 +47,7 @@ services:
       - CLOUDFLARED_TUNNEL_TOKEN=${CLOUDFLARED_TUNNEL_TOKEN}
       - CREDENTIALS_FILE=/etc/cloudflared/tunnelid.json
     volumes:
-      - /home/captain/.cloudflared/alpaca-${ENVIRONMENT}:/etc/cloudflared
+      - /home/captain/.cloudflared/alpaca-${ENVIRONMENT}:/etc/cloudflared:ro
       #- ./cloudflared:/etc/cloudflared
 
   earnyearn:
@@ -63,7 +63,7 @@ services:
       #- "profile=main"
     restart: always
     volumes:
-      - ./svc/earnyearn/:/app/
+      - ./svc/earnyearn/:/app/:ro
     networks:
       - core_network
     environment:
@@ -119,7 +119,7 @@ services:
     ports:
       - ${SLANGER_PORT}:5000
     volumes:
-      - ./svc/slanger/:/app/
+      - ./svc/slanger/:/app/:ro
     depends_on:
       - cloudflared
     networks:
@@ -146,7 +146,7 @@ services:
       #- "profile=main"
     restart: always
     volumes:
-      - ./svc/volatilityvulture/:/app/
+      - ./svc/volatilityvulture/:/app/:ro
     networks:
       - core_network
     environment:
@@ -173,8 +173,8 @@ services:
       - "profile=main"
     restart: always
     volumes:
-      - ./svc/yieldyak/:/app/
-      - ./_config/credentials.json/:/app/.credentials.json
+      - ./svc/yieldyak/:/app/:ro
+      - ./_config/credentials.json/:/app/.credentials.json:ro
     networks:
       - core_network
     environment:
@@ -219,8 +219,8 @@ services:
     restart: always
     volumes:
       - ./svc/chirple/:/app/
-      - /run/user/1000/pulse:/run/user/1000/pulse # @NOTE: this might not work for everyone 
-      - /etc/machine-id:/etc/machine-id    
+      - /run/user/1000/pulse:/run/user/1000/pulse:ro # @NOTE: this might not work for everyone 
+      - /etc/machine-id:/etc/machine-id:ro    
     devices:
       - /dev/snd
     depends_on:
@@ -244,7 +244,7 @@ services:
       - "profile=core"
     restart: always
     volumes:
-      - ./svc/influxox/:/app/
+      - ./svc/influxox/:/app/:ro
     depends_on:
       - redis-stack
       - influxdb
@@ -273,7 +273,7 @@ services:
     networks:
       - core_network
     volumes:
-      - ./svc/purrstream/:/app/
+      - ./svc/purrstream/:/app/:ro
     environment:
       - APCA_API_KEY_ID=${APCA_API_KEY_ID}
       - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
@@ -302,8 +302,8 @@ services:
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
     volumes:
-      - grafana_data:/var/lib/grafana
-      - ./_config/provisioning:/etc/grafana/provisioning
+      - grafana_data:/var/lib/grafana:ro
+      - ./_config/provisioning:/etc/grafana/provisioning:ro
 
   influxdb:
     image: influxdb:latest
@@ -323,18 +323,18 @@ services:
     networks:
       - core_network
   
-  loki:
-    image: grafana/loki:2.5.0
-    container_name: loki-${ENVIRONMENT}
-    profiles:
-      - core
-    labels:
-      - "profile=core"
-    ports:
-      - "3100:3100"
-    volumes:
-      - ./_config/loki-config.yml:/etc/loki/local-config.yaml
-    command: -config.file=/etc/loki/local-config.yaml
+  # loki:
+  #   image: grafana/loki:2.5.0
+  #   container_name: loki-${ENVIRONMENT}
+  #   profiles:
+  #     - core
+  #   labels:
+  #     - "profile=core"
+  #   ports:
+  #     - "3100:3100"
+  #   volumes:
+  #     - ./_config/loki-config.yml:/etc/loki/local-config.yaml
+  #   command: -config.file=/etc/loki/local-config.yaml
 
   marketstore:
     image: alpacamarkets/marketstore:latest
@@ -346,6 +346,8 @@ services:
           cpus: '4.0'  # Assign 2 CPU cores
         reservations:
           cpus: '2.0'  # Reserve 1 CPU core
+    cpu_shares: 1024  # Prioritize CPU usage for marketstore
+    cpuset: "0-5"
     ports:
       - ${MARKETSTORE_PORT:-5993}:5993
       - ${MARKETSTORE_DEBUG_PORT:-5994}:5994
@@ -356,7 +358,7 @@ services:
       - "profile=core"
     volumes:
       - ./_data/marketstore-data:/data
-      - ./_config/mkts.yml:/etc/mkts.yml
+      - ./_config/mkts.yml:/etc/mkts.yml:ro
     networks:
       - core_network
 
@@ -368,7 +370,7 @@ services:
       - SLANGER_DEV=${SLANGER_DEV}
       - SLANGER_MAIN=${SLANGER_MAIN}
     volumes:
-      - ./_config/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./_config/prometheus.yml:/etc/prometheus/prometheus.yml:ro
     ports:
       - "${PROMETHEUS_PORT:-9090}:9090"
     profiles:
@@ -378,18 +380,18 @@ services:
     networks:
       - core_network
 
-  promtail:
-    image: grafana/promtail:2.5.0
-    container_name: promtail-${ENVIRONMENT}
-    profiles:
-      - core
-    labels:
-      - "profile=core"
-    volumes:
-      - ./var/log:/var/log:ro
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
-      - ./_config/promtail-config.yml:/etc/promtail/config.yml
-    command: -config.file=/etc/promtail/config.yml
+  # promtail:
+  #   image: grafana/promtail:2.5.0
+  #   container_name: promtail-${ENVIRONMENT}
+  #   profiles:
+  #     - core
+  #   labels:
+  #     - "profile=core"
+  #   volumes:
+  #     - ./var/log:/var/log:ro
+  #     - /var/lib/docker/containers:/var/lib/docker/containers:ro
+  #     - ./_config/promtail-config.yml:/etc/promtail/config.yml
+  #   command: -config.file=/etc/promtail/config.yml
 
   redis-stack:
     image: redis/redis-stack:latest
@@ -404,7 +406,7 @@ services:
       - "profile=core"
     volumes:
       - redis_data:/data
-      - ./_config/redis.conf:/usr/local/etc/redis/redis.conf
+      - ./_config/redis.conf:/usr/local/etc/redis/redis.conf:ro
     networks:
       - core_network
 
